--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^16.11.6",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
@@ -33,6 +34,7 @@
     "classnames": "^2.5.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
