--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "obsidian:build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && npx tailwindcss -i ./src/index.css -o ./styles.css",
     "web:build": "react-scripts build",
     "web:dev": "react-scripts start",
-    "version": "node version-bump.mjs && git add manifest.json versions.json",
-    "vault:parse": "npx tsx src/markdown/parseVault.ts"
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
   "author": "",
